add the copyright

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -2,7 +2,7 @@ backToTop: "Back to top"
 changeLanguage: "Change language"
 changeTheme: "Change theme"
 copyCode: "Copy code"
-copyright: "© 2025 Above the Abstraction."
+copyright: "© 2025 Above the Abstraction by @Myasuka. All rights reserved."
 dark: "Dark"
 editThisPage: "Edit this page on GitHub →"
 lastUpdated: "Last updated on"
